Fix colour contrast issue

--- a/src/styles/Comment.module.css
+++ b/src/styles/Comment.module.css
@@ -5,7 +5,7 @@
 }
 
 .Date {
-  color: #fce300;
+  color: #000000;
 }
 
 .Icon {
